--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -10,8 +10,10 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Setup .NET Core
+      env:
+        SOLUTION_FILEPATH: MyWebApp/MyWebApp.sln
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.100
     - name: Build with dotnet
-      run: dotnet build MyWebApp/MyWebApp.sln --configuration Release
+      run: dotnet build $SOLUTION_FILEPATH --configuration Release
